test/fail_compilation/emptyModulePattern.d
/*
REQUIRED_ARGS: -i=
PERMUTE_ARGS:
TEST_OUTPUT:
---
Error: invalid option '-i=', module patterns cannot be empty
       run `dmd` to print the compiler manual
       run `dmd -man` to open browser on manual
---
*/
